syntax = "proto3";

package proto;

option go_package = "proto;proto";

// import "google/api/annotations.proto";


service Auth {
	
}

message Response {
    uint32 code = 1;
    string message = 2;
}

message UserRegisterRequest {
    string Username = 1;
    string Password = 2;
    string Name = 3;
    string LastName = 4;
    string Phone = 5;
    optional string Email = 6;
    optional string BirthDate = 7;
}

message UserRegisterResponse {
    string Message = 1;
    Response Response = 2;
}

message ProviderRegisterRequest {
    string Username = 1;
    string Password = 2;
    string Name = 3;
    string LastName = 4;
    string Phone = 5;
    string FixedNumber = 6;
    string Company = 7;
    string Card = 8; // bank card
    string CardNumber = 9;
    string ShebaNumber = 10;
    string Address = 11;
    enum Gender{
        Male = 0;
        Fmale = 1;
        None = 2;
    }
}
message ProviderRegisterResponse {
    string Message = 1;
    Response Response = 2;
}


message AssignProviderRequest {
    string UserID = 1;
    string Token = 2;
    string CreatedAt = 3;
    string StartedAt = 4;
    string Company = 5;
    string Card = 6; // bank card
    string CardNumber = 7;
    string ShebaNumber = 8;
    string Address = 9;
    enum Gender{
        Male = 0;
        Fmale = 1;
        None = 2;
    }
}

message AssignProviderResponse {
    string Message = 1;
    Response Response = 2;
}